Fixed dialog scrollbar color

--- a/css/core/dialogs.css
+++ b/css/core/dialogs.css
@@ -14,7 +14,7 @@ div.dialog.container {
   align-items: center;
   justify-content: center;
 
-  scrollbar-color: rgba(0, 0, 0, .25) rgba(0, 0, 0, .1);
+  scrollbar-color: rgba(88, 88, 88, 0.329) rgba(24, 24, 24, 0.459);
   scrollbar-width: thin;
 
   overflow-y: scroll !important;
